--- a/ChoreApplication/ChoreApplication.csproj
+++ b/ChoreApplication/ChoreApplication.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Chore.cs" />
+    <Compile Include="IChores.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Roommate.cs" />
